add: featur e view_job_detail

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,8 @@
-<h1>Emprego Já</h1>
 
 <% @jobs.each do |job| %>
   <h3><%= job.title %></h3>
   <p><%= job.company %></p>
   <p><%= job.location %></p>
-<% end %>
 
+  <p><%= link_to "Ver mais", job %></p>
+<% end %>
