--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -10,4 +10,8 @@
   <%= f.label :description %>
   <%= f.text_area :description %>
   <%= f.submit 'Criar Vaga' %>
+<br/>
+  <%= f.label :featured %>
+  <%= f.check_box :featured %>
+
 <% end %>
