--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -1,15 +1,16 @@
 <%= form_for @job do |f| %>
+<hr></hr>
   <%= f.label :title %>
-  <%= f.text_field :title %>
+  <%= f.text_field :title %> <br/>
   <%= f.label :location %>
-  <%= f.text_field :location %>
+  <%= f.text_field :location %> <br/>
   <%= f.label :company_id %>
-  <%= f.collection_select :company_id, @companies, :id, :name %>
+  <%= f.collection_select :company_id, @companies, :id, :name %> <br/>
   <%= f.label :category %>
-  <%= f.text_field :category %>
+  <%= f.text_field :category %> <br/>
   <%= f.label :featured  %>
-  <%= f.check_box :featured  %>
+  <%= f.check_box :featured  %> <br/>
   <%= f.label :description %>
-  <%= f.text_area :description %>
+  <%= f.text_area :description %> <br/>
   <%= f.submit 'Criar Vaga' %>
 <% end %>
