--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,6 +3,7 @@
     <div class="jobs">
       <h3><%= job.title %></h1>
       <p><%= job.location %></p>
+      <p><%= job.category.name %></p>
       <p><%= job.company.name %></p>
       <%= link_to 'Ver mais', job %>
     </div>
@@ -13,4 +14,3 @@
     <%= link_to company.name, company %>
   <% end %>
 </aside>
-
