--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,9 +9,17 @@
     </div>
   <% end %>
 </section>
+
 <aside>
+
+  <h3>Empresas:</h3>
   <% @companies.each do |company| %>
     <%= link_to company.name, company %>
   <% end %>
-</aside>
 
+  <h3>Categorias:</h3>
+  <% @categories.each do |category| %>
+    <%= link_to category.name, category %>
+  <% end %>
+
+</aside>
