--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,6 +15,9 @@
 <aside>
   <% @companies.each do |company| %>
     <%= link_to company.name, company %>
+    <% if company.premium? %>
+      <p><strong>Empresa Premium<strong></p>
+    <% end %>
   <% end %>
 </aside>
 <aside>
@@ -22,4 +25,3 @@
     <%= link_to category.name, category %>
   <% end %>
 </aside>
-
