--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,15 +1,17 @@
 <section id="jobs">
   <% @jobs.each do |job| %>
-    <div class="jobs">
-      <h3><%= job.title %></h1>
-      <p><%= job.location %></p>
-      <p><%= job.company.name %></p>
-      <p><%= job.category.name %></p>
-      <% if job.recent? %>
-        <p><em>Novidade</em></p>
-      <% end %>
-      <%= link_to 'Ver mais', job %>
-    </div>
+    <% unless job.expired? %>
+      <div class="jobs">
+        <h3><%= job.title %></h1>
+        <p><%= job.location %></p>
+        <p><%= job.company.name %></p>
+        <p><%= job.category.name %></p>
+        <% if job.recent? %>
+          <p><em>Novidade</em></p>
+        <% end %>
+        <%= link_to 'Ver mais', job %>
+      </div>
+    <% end %>
   <% end %>
 </section>
 <aside>
