--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,5 +1,9 @@
+
 <h2><%= @job.title %></h2>
 <hr>
+<% if @job.expired? %>
+  <h3>Vaga Expirada!</h3>
+<% end %>
 <p><strong>Empresa:</strong> <%= @job.category.name %></p>
 <p><strong>Empresa:</strong> <%= @job.company.name%></p>
 <p><strong>Descrição Completa:</strong> <%= @job.description %></p>
